--- a/_posts/2019-07-06-the-us-narrative-today.html
+++ b/_posts/2019-07-06-the-us-narrative-today.html
@@ -2577,107 +2577,108 @@ stories:
   domain: http://www.gillettenewsrecord.com/
   link: https://www.gillettenewsrecord.com/news/wyoming/article_619d2acf-020f-5419-8c68-7b52032e160d.html
 images:
-- name: oldbarn-oldbarn-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-marcel-duchamp.jpg
-- name: castle-wall-DSC-0067-nazi-poster.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-nazi-poster.JPG
-- name: wind-mills-windmills-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-matrix.jpg
-- name: stories-new-42-110-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-42-110-800-500-0-max-0--5--5.jpg
-- name: school-clouds-church-clouds-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-gan-vogh.jpg
-- name: gypsymosaic-gypsy-eyes-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-creativity.jpg
-- name: old-school-house-old-schoolhouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-umberto-bocc.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dali-three.jpg
-- name: san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
-- name: curtain-curtain-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-bright-sand.jpg
-- name: server-cloud-server-racks-clouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dark-dali.jpg
-- name: gypsy-wagon-gypsywagon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dark-dali.jpg
-- name: dragon-desert-desert-dragon-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-graham-sutherland.jpg
-- name: lincoln-memorial-lincolnmemorial-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-kandinsky-bv.jpg
-- name: oldcabin-store-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-deep-connections.jpg
-- name: aws-s3-columbiagorge-columbiagorge-transformed-still-1200.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-columbiagorge-columbiagorge-transformed-still-1200.png
-- name: legal-statue-legalstatue-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-spagetti-accident.jpg
-- name: mistywoods-babyfoot-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-gan-vogh.jpg
-- name: legal-statue-legalstatue-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dark-rain.jpg
-- name: old-granary-field-oldhouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-gan-vogh.jpg
-- name: old-school-house-old-schoolhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-far-away.jpg
-- name: locked-up-steam-lock-up-steam-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-5.jpg
-- name: dragon-desert-desert-dragon-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-pablo-blue.jpg
-- name: meadowbutterfly-meadow-butterfly-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-smooth-ride.jpg
-- name: scream-IMG_8318.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8318.jpg
-- name: crow-crow-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-purp-paper.jpg
-- name: downtown-los-angeles-downtown-la-dry-skin.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dry-skin.JPG
-- name: white-house-lawn-white-house-window-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-smooth-ride.jpg
-- name: christianity-christianity-under-construction-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-green-zuma.jpg
-- name: walled-garden-walled-garden-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-deep-connections.jpg
-- name: udnie-IMG_8312.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8312.jpg
-- name: white-house-whitehouse-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-deep-connections.jpg
-- name: stories-cargo-ship-on-sea-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-constitution.jpg
-- name: bluelake-gred-mash-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-00-00.jpg
-- name: meadowbutterfly-meadow-butterfly-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-bright-sand.jpg
-- name: dragon_close-up-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-copper-circuit.jpg
-- name: server-cloud-server-racks-clouds-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smoking-cigarette.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
-- name: server-cloud-server-racks-clouds-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-space-pizza.jpg
-- name: status-berlin-status-berlin-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-brush.jpg
-- name: death-valley-death-valley-national-park-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-crabapple.jpg
-- name: server-cloud-server-racks-door-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-ww2-dresden.jpg
-- name: old-church-oldchurch-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-space-pizza.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-pablo-blue.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-pablo-blue.JPG
-- name: art-museum-art-museum-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit-4.jpg
-- name: downtown-trucksilo-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-crafty-painting.jpg
-- name: sand-hand-sand-hand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-free-woman.jpg
-- name: oldhouse-oldhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-brush.jpg
-- name: dc-statue-dcstatue-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-gred-mash.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
+- name: file-00-00-00-00 2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-00-00
+    2.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-alien-goggles.jpg
+- name: old-door-lock-old-door-lock-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-brush.jpg
+- name: oldhouse-granaryfield-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-cinnamon-rolls.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-atari-asteroids.jpg
+- name: powerlines-power-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-rainbow-festival.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
+- name: gypsymosaic-gypsy-eyes-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-sunday.jpg
+- name: crow_dark_rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_rain.jpg
+- name: aws-s3-stories-new-80-87-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-80-87-800-500-0-max-0--1--1.jpg
+- name: sand-hand-sand-hand-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-attack-planes.jpg
+- name: meadowbutterfly-meadow-butterfly-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-yellow-paper.jpg
+- name: power-lines-power-lines-empty-space-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-green-zuma.jpg
+- name: oldhotel-oldhotel-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-hot-spicy.jpg
+- name: oldcabin-store-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-matrix.jpg
+- name: death-valley-death-valley-national-park-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-crunch-paper.jpg
+- name: crow-crow-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-hot-spicy.jpg
+- name: bluelake-bright-sand-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-bright-sand-file-00-00-38-67.jpg
+- name: stories-new-27-93-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--5--5.jpg
+- name: old-door-lock-old-door-lock-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-yellow-collage.jpg
+- name: stories-DSC-0084-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-DSC-0084-dali-three.jpg
+- name: scream-IMG_7916.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7916.jpg
+- name: oldroad-old-road-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-pablo-blue.jpg
+- name: old-door-lock-old-door-lock-2-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-yellow-collage.jpg
+- name: store-on-corner-oldcabin-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-constitution.jpg
+- name: white-house-whitehouse-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-marcel-duchamp.jpg
+- name: adam-smith-adam-smith-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-hot-spicy.jpg
+- name: containership-containership-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit.jpg
+- name: oldhouse-oldhouse-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-smoking-cigarette.jpg
+- name: berlinwall-DSC-0084-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-ww2-color.jpg
+- name: aws-s3-square-68-161-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-68-161-800-500-0-max-0--5--1.jpg
+- name: oldcabin-oldcabin-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-constitution.jpg
+- name: powerlines-power-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dry-skin.jpg
+- name: white-house-whitehouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-sunday.jpg
+- name: sand-hand-sand-hand-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-neo-instinct.jpg
+- name: locked-up-steam-lock-up-steam-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-graham-sutherland.jpg
+- name: containership-containership-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-deep-connections.jpg
+- name: server-cloud-server-racks-door-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-purp-paper.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
+- name: aws-s3-stories-old-yellow-house.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-yellow-house.jpg
+- name: christianity-christianity-under-construction-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dark-dali.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-light-dali.jpg
+- name: udnie-IMG_8486.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8486.jpg
+- name: paris-paris-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-spagetti-accident.jpg
+- name: store-on-corner-store-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-blue-granite.jpg
+- name: oldroad-old-road-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-yellow-collage.jpg
+- name: powerlines-power-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-granite.jpg
+- name: trucksilo-trucksilo-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-electricity.jpg
+- name: yosemite-yosemite-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crafty-painting.jpg
+- name: capital-battle-capitolbattle-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-graham-sutherland.jpg
+- name: christianity-christianity-under-construction-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-purp-paper.jpg
 ---
 Norman Police Investigating Report Of Stolen Dog.&nbsp;New Home Construction Drops In Hailey.&nbsp;Newby To Nurture Christian Atmosphere.&nbsp;Michigan Regulators Order Steps Following Utility Plant Fire.&nbsp;Second, Even Bigger Earthquake Strikes Southern California.&nbsp;Seized North Korean Ship Sought For American Student's Death.&nbsp;Connell Earns Reserve Champion At State Horse Show.&nbsp;Fig Aiken Holds Launch Party At The Willcox.&nbsp;
